--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   text-align: center;
   font-family: courier;
   background-image: url("../assets/image.jpeg");
@@ -19,6 +19,78 @@ body {
 
 .my_social a img {
   height: 1.5em;
+}
+
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+body {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+          justify-content: center;
+  height: 100vh;
+  background: white;
+  overflow: hidden;
+}
+
+#check {
+  z-index: -1;
+  display: none;
+}
+
+.container {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+          justify-content: center;
+  flex-wrap: wrap;
+}
+.container h1 {
+  font-family: 'Open Sans', sans-serif;
+  padding-left: 40px;
+  font-size: 80px;
+  color: #777;
+}
+
+#check:checked + .container .check_label {
+  background: #0080ff;
+  -webkit-clip-path: polygon(18% 25%, 40% 53%, 90% 13%, 100% 26%, 36% 79%, 5% 36%);
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+#check:checked + .container .check_label .effect {
+  opacity: 0;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.check_label {
+  width: 60px;
+  height: 60px;
+  background: white;
+  padding: 15px;
+  border-radius: 30px;
+  overflow: hidden;
+  -webkit-clip-path: polygon(50% 0%, 100% 0, 100% 100%, 50% 100%, 0 100%, 0 0);
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  border: 2px solid #0080ff;
+  cursor: pointer;
+}
+
+.effect {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  -webkit-clip-path: polygon(18% 25%, 40% 53%, 90% 13%, 100% 26%, 36% 79%, 5% 36%);
+  background: rgba(0, 128, 255, 0.1);
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  -webkit-transition-delay: 0.1s;
+          transition-delay: 0.1s;
 }
 
 .containers {
