--- a/css/styles.css
+++ b/css/styles.css
@@ -32,16 +32,17 @@ body {
   display: none;
 }
 
-/*.container {
+.container {
   display: -webkit-box;
   display: flex;
   -webkit-box-align: center;
-          align-items: center;
+  align-items: center;
   -webkit-box-pack: center;
-          justify-content: center;
+  justify-content: center;
   flex-wrap: wrap;
 }
-.container h1 {
+
+/*.container h1 {
   font-family: 'Open Sans', sans-serif;
   padding-left: 40px;
   font-size: 80px;
