--- a/css/styles.css
+++ b/css/styles.css
@@ -42,14 +42,14 @@ body {
   flex-wrap: wrap;
 }
 
-/*.container h1 {
+.container h1 {
   font-family: 'Open Sans', sans-serif;
   padding-left: 40px;
   font-size: 80px;
   color: #777;
 }
 
-#check:checked + .container .check_label {
+/*#check:checked + .container .check_label {
   background: #0080ff;
   -webkit-clip-path: polygon(18% 25%, 40% 53%, 90% 13%, 100% 26%, 36% 79%, 5% 36%);
   -webkit-transition: all 0.5s ease;
