--- a/css/styles.css
+++ b/css/styles.css
@@ -49,13 +49,14 @@ body {
   color: #777;
 }
 
-/*#check:checked + .container .check_label {
+#check:checked+.container .check_label {
   background: #0080ff;
   -webkit-clip-path: polygon(18% 25%, 40% 53%, 90% 13%, 100% 26%, 36% 79%, 5% 36%);
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
-#check:checked + .container .check_label .effect {
+
+/*#check:checked + .container .check_label .effect {
   opacity: 0;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
