--- a/css/styles.css
+++ b/css/styles.css
@@ -88,12 +88,12 @@ body {
   transition-delay: 0.1s;
 }
 
-/*.containers {
+.containers {
   width: 520px;
   margin: 20px auto;
 }
 
-#contact h1 {
+/*#contact h1 {
   font-family: helvetica;
   font-weight: normal;
   text-align: center;
